IDP-1516 Reduce guava dependence.
https://issues.shibboleth.net/jira/browse/IDP-1516

Fix a lot of annotations.  Streamline a lot of Collection -> Map
conversions.  Convert several gratuitous @Nullable @NonnnullElements
to @Nonnull @NonnullElements anootaions (with precisely one mainline
fix needed)